--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Weather App</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel= "stylesheet" href = "styles/styles.css">
-    <script src="scrips/scripts.js" defer></script>
+    <script src="scripts/scripts.js" defer></script>
 </head>
 <body>
     <div class="container">
